// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkHorizontalNavItem should render correctly 1`] = `
<li
  aria-selected="false"
  className="bpk-horizontal-nav__item"
  role="tab"
>
  <button
    className="bpk-horizontal-nav__link"
    disabled={false}
    type="button"
  >
    My nav item content
  </button>
</li>
`;

exports[`BpkHorizontalNavItem should render correctly with "selected" prop 1`] = `
<li
  aria-selected="true"
  className="bpk-horizontal-nav__item"
  role="tab"
>
  <button
    className="bpk-horizontal-nav__link bpk-horizontal-nav__link--selected"
    disabled={true}
    type="button"
  >
    My nav item content
  </button>
</li>
`;

exports[`BpkHorizontalNavItem should render correctly with "spaceAround" prop 1`] = `
<li
  aria-selected="false"
  className="bpk-horizontal-nav__item bpk-horizontal-nav__item--space-around"
  role="tab"
>
  <button
    className="bpk-horizontal-nav__link"
    disabled={false}
    type="button"
  >
    My nav item content.
  </button>
</li>
`;

exports[`BpkHorizontalNavItem should render correctly with "stretch" prop 1`] = `
<li
  aria-selected="false"
  className="bpk-horizontal-nav__item bpk-horizontal-nav__item--stretch"
  role="tab"
>
  <button
    className="bpk-horizontal-nav__link bpk-horizontal-nav__link--stretch"
    disabled={false}
    type="button"
  >
    My nav item content.
  </button>
</li>
`;

exports[`BpkHorizontalNavItem should render correctly with an "href" prop 1`] = `
<li
  aria-selected="false"
  className="bpk-horizontal-nav__item"
  role="tab"
>
  <a
    aria-disabled={false}
    className="bpk-horizontal-nav__link"
    href="#"
  >
    My nav item content
  </a>
</li>
`;

exports[`BpkHorizontalNavItem should render correctly with arbitrary props 1`] = `
<li
  aria-selected="false"
  className="bpk-horizontal-nav__item"
  role="tab"
>
  <button
    className="bpk-horizontal-nav__link"
    data-arbitrary-1="arbirary-value-1"
    data-arbitrary-2="arbirary-value-2"
    disabled={false}
    type="button"
  >
    My nav content.
  </button>
</li>
`;

exports[`BpkHorizontalNavItem should render correctly with custom "className" prop 1`] = `
<li
  aria-selected="false"
  className="bpk-horizontal-nav__item"
  role="tab"
>
  <button
    className="bpk-horizontal-nav__link my-custom-class"
    disabled={false}
    type="button"
  >
    My nav item content
  </button>
</li>
`;
